# paper-evidence

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: fly_hypothesis_gen.py
scripts/: build_evidence.py  deep_read_paper.py  hypothesis_loop.py  recall_audit.py
src/paper_evidence/: __init__.py  citation.py  deepread.py  evidence.py  evidence_state.py  hypothesis.py  llm.py  provenance.py  quote_gate.py  recall.py  semantic.py  structure.py
tests/: test_backport.py  test_backport2.py  test_backport3.py  test_evidence.py  test_hypothesis.py  test_quote_gate.py  test_recall.py  test_semantic.py  test_structure.py
